After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771948 - map plugin: Slowly move to selected image
map plugin: Slowly move to selected image
Status: RESOLVED FIXED
Product: eog-plugins
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Thomas Bechtold
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-25 17:27 UTC by Thomas Bechtold
Modified: 2019-02-22 03:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
move center slowly between different images (1.31 KB, patch)
2016-09-25 17:29 UTC, Thomas Bechtold
none Details | Review

Description Thomas Bechtold 2016-09-25 17:27:03 UTC
When navigating through images while showing the map, the center of the map is currently changed directly (direct jump to the new center) without any transition/animation. Using libchamplains "champlain_view_go_to()" function slowly moves from one location to the next when showing the next image.
This is a much better experience and you can visually follow from where you go to the next image.
Comment 1 Thomas Bechtold 2016-09-25 17:29:32 UTC
Created attachment 336222 [details] [review]
move center slowly between different images
Comment 2 Felix Riemann 2016-10-01 13:34:58 UTC
It's going to take a while to get used to the odd de-/acceleration but it's a nice touch. :)

commit 55ba65c7f4763a86cd06549a4e902db294f860e1
Author: Thomas Bechtold <>
Date:   Sun Sep 25 19:27:59 2016 +0200

    map: Slowly move to selected image instead of a quick jump
    
    When navigating through images while showing the map, the center of the map
    now changes slowly from the current position to the newly selected image.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771948