map: Slowly move to selected image instead of a quick jump

When navigating through images while showing the map, the center of the map
now changes slowly from the current position to the newly selected image.

https://bugzilla.gnome.org/show_bug.cgi?id=771948